# xfce-historical

./: AUTHORS  COPYING  COPYRIGHT  ChangeLog  FAQ  INSTALL  Imakefile  Makefile  Makefile.am  Makefile.bak  Makefile.in  Makefile.init  NEW  NEWS  README  README.UPGRADE-3.2.0  README.md  XFCE.c  XFCE.def  XFCE.man  XFCE_cb.c  XFCE_icon.h  XFce-de.ad  XFce-fr.ad  XFce-it.ad  Xinitrc.xfce  Xresources.xfce  Xsession.xfce  acconfig.h  acinclude.m4  aclocal.m4  addicon.c  addicon_cb.c  addiconpix.h  bxform-089-glibc.tgz  close.h  color.c  color.h  command.c  command.h  (+68 more)
backdrops/: Blue.list  DISTFILES.in  Default.xpm  Granit.xpm  Green.xpm  Makefile.am  Makefile.in  Makefile.in.in  Marblee.xpm  Multicolor2.xpm  Pieces.xpm  Praline.xpm  Speed.xpm  Stucco.xpm  Toulouse.list
cursors/: Makefile.in
debian/: README.Debian  README.debian  changelog  conffiles  control  copyright  dirs  menu  postinst  postrm  rules  sample.fvwm2rc  sample.mwm.xinitrc  sample.xfbdrc  sample.xfce3rc  sample.xfce3rc.ja  sample.xfce3rc.ko  sample.xfce3rc.zh_CN.GB2312  sample.xfce3rc.zh_TW.Big5  sample.xfcolors  sample.xfsoundrc  sample.xfwmrc  sample.xinitrc  sample.xtree.reg  xfce_start  xfcolors
docs/: Makefile.in
dt/: Makefile.in  Xinitrc.xfce.in  Xresources.xfce  Xresources.xfce.in  Xsession.xfce.in
fonts/: Makefile.in
fvwm/: module.h
gdm/: Makefile.in  XFce.in
goodies/: Imakefile  Quickstart  sample.fvwm2rc  sample.fvwmrc  sample.mwm.xinitrc  sample.xfbdrc  sample.xfcerc  sample.xfwmrc  sample.xinitrc  xfce_remove  xfce_setup
html/: DISTFILES.in  Makefile.in.in
icons/: 3dpaint.xpm  ABC.xpm  AZ.xpm  AceKingCards.xpm  Animator.xpm  AntiVirus.xpm  ArtFolderFull.xpm  BackUp.xpm  Ballon.xpm  BallotBox.xpm  Binoculars.xpm  Bomb.xpm  Bomb2.xpm  Book.xpm  Box_empty.xpm  Box_full.xpm  BulletHole.xpm  C++.xpm  C.xpm  CAD.xpm  CAD2.xpm  CDPlayer.xpm  CPUChip.xpm  Calculator.xpm  Camera.xpm  Cards.xpm  Chart.xpm  CheckMarkMonitor.xpm  ChiselChartSlide.xpm  Clock.xpm  ColoredCompactDisc.xpm  Colormap.xpm  CompactDisc.xpm  Connect.xpm  Copy.xpm  CrashCartoon.xpm  CylinderWrenchSpreadsheet.xpm  DISTFILES.in  Database.xpm  DeskGlobe.xpm  (+123 more)
intl/: Makefile.in  libintl.h
libs/: ClientMsg.c  GetFont.c  Grab.c  Makefile.am  Makefile.in  Module.c  Parse.c  Picture.c  Strings.c  System.c  colorselect.c  colorselect.h  configure.h  constant.h  defaulticon.h  empty.h  envvar.c  fileselect.c  fileselect.h  fileutil.c  fileutil.h  fontselection.c  fontselection.h  gnome_protocol.c  gnome_protocol.h  gtkinvisible.h  lightdark.h  module.h  my_intl.h  my_string.c  my_string.h  my_tooltips.c  my_tooltips.h  mygtkclock.c  mygtkclock.h  myhandler.c  myhandler.h  safemalloc.c  sendinfo.c  sendinfo.h  (+12 more)
other/: CONFFILES.in  COPYING  COPYING.in  (+44 more)
palettes/: Alpine  Aluminium  Analog  Anthracite  Bahamas  Basic  BeHappy  BeHappy2  BeHappy3  BlueX  BlueX2  BlueX3  Bronze  CandyBox  Cheese  Citrouille  Clinky  Craters  DISTFILES.in  Default  Dolly  Glass  Ground  HIFI  Helice  HiTech  HiTech2  Iceland  Liquid  Liquid2  Makefile.am  Makefile.in  Makefile.in.in  Mauve  Metal  Military  Modern  Monkey  Nature  OldWood  (+19 more)
xfbd/: Makefile.am  Makefile.in  xfbd.1  xfbd.c  xfbd.gld  xfbd.h  xfbd_cb.c  xfbd_cb.h
xfce/: Imakefile  Makefile  Makefile.am  Makefile.in  XFCE.c  XFCE.h  XFCE_cb.c  XFce-de.ad  XFce-en.ad  XFce-es.ad  XFce-fr.ad  XFce-hu.ad  XFce-it.ad  XFce-pt.ad  XFce-sk.ad  XFce2.logo  action.c  action.h  action_cb.c  action_cb.h  addicon.c  addicon.h  addicon_cb.c  addiconpix.h  backdrop.h  close.h  close_s.h  closepix.h  color.c  color.h  command.c  command.h  command_cb.c  configfile.c  configfile.c.orig  configfile.h  constant.h  defaulticon.h  defcolor.c  defcolor.h  (+98 more)
xfce/.xvpics/: XFce2.logo  defaulticon.h  file1.h  file2.h  games.h  handle_s.h  mail.h  man.h  multimedia.h  network.h  paint.h  print.h  schedule.h  sound.h  term.h  write.h
xfclock/: Makefile.am  Makefile.in  xfclock.1  xfclock.c  xfclock.h  xfclock_cb.c  xfclock_cb.h  xfclock_closel.c  xfclock_closel.h  xfclock_colorsel.c  xfclock_colorsel.h  xfclock_config.c  xfclock_config.h  xfclock_menus.c  xfclock_menus.h  xfclock_opt.c  xfclock_opt.h  xfclock_style.c  xfclock_style.h
xfgnome/: Makefile.am  Makefile.in  xfgnome.c  xfgnome.h
xfmouse/: Imakefile  Makefile  Makefile.am  Makefile.in  xfmouse.1  xfmouse.c  xfmouse.gld  xfmouse.h  xfmouse.man  xfmouse.xpm  xfmouse_cb.c  xfmouse_cb.h  xfmouse_main.c
xfpager/: Imakefile  Makefile  Makefile.am  Makefile.in  XfwmPager.c  XfwmPager.h  x_pager.c  xfpager.1  xfpager.man
xfsound/: .depend  Imakefile  Makefile  Makefile.am  Makefile.in  xfdsp.c  xfdsp.h  xfplay  xfsound.1  xfsound.c  xfsound.gld  xfsound.h  xfsound.man  xfsound_cb.c  xfsound_cb.h  xfsound_main.c
xftree/: Makefile.am  Makefile.in  README  TODO  entry.c  entry.h  gtk_cpy.c  gtk_cpy.h  gtk_dlg.c  gtk_dlg.h  gtk_dnd.h  gtk_exec.c  gtk_exec.h  gtk_get.c  gtk_get.h  gtk_prop.c  gtk_prop.h  i18n.h  icons.h  io.c  io.h  reg.c  reg.h  toolbar_icons.h  top.c  top.h  uri.c  uri.h  xfdiff_colorsel.h  xftree.1  xtree.c  xtree_cb.c  xtree_cb.h  xtree_cfg.h  xtree_cpy.c  xtree_cpy.h  xtree_dnd.c  xtree_dnd.h  xtree_du.c  xtree_functions.c  (+15 more)
xftree/icons/: Makefile.am  Makefile.in  closewin.xpm  dir_close.xpm  dir_close.xpm.bak  dir_close_lnk.xpm  dir_close_lnk.xpm.bak  dir_open.xpm  dir_open.xpm.bak  dir_open_dot.xpm  dir_open_hidden.xpm  dir_open_lnk.xpm  dir_open_lnk.xpm.bak  dir_pd.xpm  dir_pd.xpm.bak  dir_ro_open_dot.xpm  dir_ro_open_hidden.xpm  dir_up.xpm  dir_up.xpm.bak  error.xpm  exe_lnk.xpm  fifo.xpm  info.xpm  link_flag.xpm  new_win.xpm  question.xpm  socket.xpm  stale_lnk.xpm  warning.xpm
xfwm/: .depend  Imakefile  Makefile  Makefile.am  Makefile.in  Parse.c  add_window.c  alpha_header.h  bindings.c  borders.c  builtins.c  close.xbm  colormaps.c  colors.c  complex.c  decorations.c  default_icon.h  events.c  focus.c  functions.c  iconify.xbm  icons.c  log  maximize.xbm  maximize_pressed.xbm  menu.xbm  menus.c  menus.h  misc.c  misc.h  module.c  module.h  move.c  parse.h  placement.c  read.c  resize.c  screen.h  session.c  session.h  (+14 more)
(+168 files in other folders)
