## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4

@SET_MAKE@

CLEANFILES=*~ *.bak core *.core *.o .depend .deps/* *.cache
USE_INCLUDED_LIBINTL = @USE_INCLUDED_LIBINTL@
USE_NLS = @USE_NLS@
USE_DT = @USE_DT@
IMLIB_LIBS = @IMLIB_LIBS@
GDK_IMLIB_LIBS = @GDK_IMLIB_LIBS@

SUBDIRS = intl libs xfce xfwm xftree xfpager xfmouse xfbd xfclock xfsound \
	xfgnome scripts other backdrops icons palettes sounds html po dt
