dnl Process this file with autoconf to produce a configure script.

dnl ---------------------------------------------------------------------------
dnl Initialize automake now
dnl ---------------------------------------------------------------------------

AC_INIT()

AC_CANONICAL_HOST

AC_SUBST(PACKAGE, xfce)
AC_SUBST(VERSION, 3.0.1)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(xfce, 3.0.1)
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB

ALL_LINGUAS="ca de es fr it pl"
AM_GNU_GETTEXT
AC_LINK_FILES($nls_cv_header_libgt, $nls_cv_header_intl)

AC_CHECK_HEADERS(ctype.h)
AC_CHECK_HEADERS(unistd.h string.h getopt.h)
AC_CHECK_HEADERS(fcntl.h)
AC_HEADER_STAT
AC_HEADER_DIRENT
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME
AC_PATH_X
AC_PATH_XTRA

AC_TYPE_SIGNAL
AC_CHECK_FUNCS(strcasecmp strncasecmp)

AM_PATH_GTK(1.2.0, ,
            AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))

AC_CHECK_HEADER(X11/xpm.h, ,AC_CHECK_FILE($x_includes/X11/xpm.h, ,AC_MSG_WARN(xpm.h not found)))
AC_CHECK_LIB(Xpm, main, ,AC_MSG_ERROR(Invalid or missing library libXpm), -lX11 $X_LIBS)

AC_MSG_CHECKING(XFce directory structure)
if test "x$datadir" = "x\${prefix}/share" -o "x$prefix" = "xNONE"; then
  XFCE_DIR="/var/XFCE"
else
  XFCE_DIR="$datadir/XFCE"
fi
AC_SUBST(XFCE_DIR)
XFCE_LOCALE_DIR="$XFCE_DIR/locale"
AC_SUBST(XFCE_LOCALE_DIR)
AC_MSG_RESULT(XFCE_DIR set to $XFCE_DIR)
AC_MSG_RESULT(XFCE_LOCALE_DIR set to $XFCE_LOCALE_DIR)

AC_MSG_CHECKING(install CDE specific files)
AC_ARG_ENABLE(dt,
        [  --enable-dt             enable CDE specific files],
        [USE_DT=$enableval],
        [USE_DT=no]
)
AC_MSG_RESULT($USE_DT)
AC_SUBST(USE_DT)

AC_MSG_CHECKING(compiler flags)
dnl Only use -Wall if we have gcc
if test "x$GCC" = "xyes"; then
  if test -z "`echo "$CFLAGS" | grep "\-Wall" 2> /dev/null`" ; then
    CFLAGS="$CFLAGS -Wall"
  fi
fi

AC_OUTPUT(Makefile libs/Makefile xfce/Makefile xfwm/Makefile \
	xftree/Makefile xfpager/Makefile xfmouse/Makefile \
	xfbd/Makefile xfclock/Makefile xfsound/Makefile \
	scripts/Makefile intl/Makefile po/Makefile.in \
	other/Makefile.in backdrops/Makefile.in icons/Makefile.in \
	palettes/Makefile.in sounds/Makefile.in dt/Makefile \
	html/Makefile.in)
AC_OUTPUT_COMMANDS([sed -e "s%XFCE_DIR%$XFCE_DIR%g" scripts/xfce_setup.in > scripts/xfce_setup])
AC_OUTPUT_COMMANDS([sed -e "s%XFCE_DIR%$XFCE_DIR%g" scripts/xfhelp.in > scripts/xfhelp])
AC_OUTPUT_COMMANDS([sed -e "s%XFCE_DIR%$XFCE_DIR%g" xfce/system.xfce3rc.in > xfce/system.xfce3rc])
AC_OUTPUT_COMMANDS([sed -e "s%XFCE_DIR%$XFCE_DIR%g" other/sample.xfbdrc.in >  other/sample.xfbdrc])
AC_OUTPUT_COMMANDS([sed -e "s%XFCE_DIR%$XFCE_DIR%g" other/sample.xfsoundrc.in > other/sample.xfsoundrc])
AC_OUTPUT_COMMANDS([sed -e "s%XFCE_DIR%$XFCE_DIR%g" other/sample.xfce3rc.in >  other/sample.xfce3rc])
AC_OUTPUT_COMMANDS([sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
AC_OUTPUT_COMMANDS([sed -e "/DISTFILES =/r other/DISTFILES.in" other/Makefile.in > other/Makefile])
AC_OUTPUT_COMMANDS([sed -e "/DISTFILES =/r backdrops/DISTFILES.in" backdrops/Makefile.in > backdrops/Makefile])
AC_OUTPUT_COMMANDS([sed -e "/DISTFILES =/r icons/DISTFILES.in" icons/Makefile.in > icons/Makefile])
AC_OUTPUT_COMMANDS([sed -e "/DISTFILES =/r palettes/DISTFILES.in" palettes/Makefile.in > palettes/Makefile])
AC_OUTPUT_COMMANDS([sed -e "/DISTFILES =/r sounds/DISTFILES.in" sounds/Makefile.in > sounds/Makefile])
AC_OUTPUT_COMMANDS([sed -e "/DISTFILES =/r html/DISTFILES.in" html/Makefile.in > html/Makefile])
