EXTRA_DIST = $(palettes_DATA)

palettesdir=$(XFCE_DIR)/palettes
palettes_DATA=\
 Alpine \
 Altxfce \
 Altxfce2 \
 Altxfce3 \
 Aluminium \
 Analog \
 Anthracite \
 Bahamas \
 Basic \
 BeHappy \
 BeHappy2 \
 BeHappy3 \
 BeHappy4 \
 Blue \
 Bronze \
 Bronze2 \
 BlueX \
 BlueX2 \
 BlueX3 \
 BlueX4 \
 CandyBox \
 Cheese \
 Chrome \
 Citrouille \
 Classic \
 Classic2 \
 Clinky \
 Craters \
 DarkMetal \
 Default \
 Defcon \
 Desert \
 Dolly \
 Dust \
 Eaz-l \
 Fall \
 GTK+Default \
 GTK+Default2 \
 Glass \
 Golden \
 GoldenBoy \
 GoldenBoy2 \
 Grayscale \
 GreySlate \
 GreenIron \
 Ground \
 Helice \
 HiTech \
 HiTech2 \
 HiContrast\
 Iceland \
 Jazza \
 Jazza2 \
 Kdetheme \
 Liquid \
 Liquid2 \
 LightBulb \
 LightBulb2 \
 LightBulb3 \
 Linea \
 Linea2 \
 Linea3 \
 Mauve \
 Metal \
 Military \
 Modern \
 Modern2 \
 Moz9 \
 Moz9-2 \
 Nature \
 Nemo \
 Netsy \
 OldWood \
 Pale \
 Paper \
 Pinky \
 Plum \
 Power \
 Power2 \
 Prairie \
 Prune \
 PruneDark \
 Quartz \
 Reader \
 Salmon \
 Salmon2 \
 Sand \
 Silver \
 Silver2 \
 Smooth \
 SmoothBW \
 SmoothGreen \
 SoftBlue \
 Spring \
 Standard \
 Standard2 \
 Stellar \
 Stellar2 \
 Stripe \
 Stripe2 \
 Stripe3 \
 Sunny \
 Symbiose \
 TBlue \
 Teal \
 Thinice \
 Tiny \
 Tommy \
 Tradition \
 Tradition2 \
 Troica \
 Typhoon \
 Ultrafina \
 Vanadium \
 Win \
 Win2 \
 Win3 \
 Xfce-1 \
 Xfce-2
